--- a/styles/style.css
+++ b/styles/style.css
@@ -2,18 +2,42 @@
     margin: 0;
 }
 
-.container{
-    width: 100%;
+::-webkit-scrollbar {
+    display: none;
 }
 
+.back{
+    /* background: url("/images/bg.png");
+    background-position: center;
+    background-color: red; */
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+    margin: 0;
+    height: fit-content;
+    width: fit-content;
+    position: absolute;
+    top: 0%;
+}
+
+.container{
+    background-color: rgb(226, 226, 226);
+    width: 95%;
+    margin: 2%;
+    opacity: 1; 
+}
+
+.stack-top{
+    z-index: 9;
+}
 .header-container{
     display: flex;
     justify-content: space-between;
-    background-color: brown;
+    background-color: rgb(172, 172, 172);   
     padding: 5px 2px;
+    margin-bottom: 1rem;
 }
 
 .header-social-container{
+    margin-left: 1rem;
     display: flex;
     gap: 5px;
 }
@@ -41,9 +65,19 @@
 }
 
 .header-cv{
-    width: 200px;
-    height: 50px;
-    background-color: green;
+    margin-right: 1rem;
+    text-align: center;
+}
+
+.button {
+    background-color: #535353; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
 
 .content-container{
@@ -66,6 +100,7 @@ fieldset{
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 1rem;
+    margin-bottom: 1rem;
 }
 
 .project{
@@ -82,4 +117,8 @@ fieldset{
 
 .project p{
     font-size: larger;
+}
+
+.project fieldset{
+    min-height: 90%;
 }
