--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@
     display: flex;
     justify-content: space-between;
     background-color: rgb(172, 172, 172);   
+    /* background: linear-gradient(45deg, #319ad6 0%,#cc2366 25%,#dc2743 50%,#e6683c 75%,#be7629 100%);  */
     padding: 5px 2px;
     margin-bottom: 1rem;
 }
